--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -2,27 +2,16 @@ server {
     listen       80;
     server_name  data.buckryan.com;
 
-    # project media assuming it's called at media/
-    # keep in mind that media/ will be maintained as a directory by the root command
-    # location ^~ /static/ {
-    #     root   /site/where/project/is;
-    # }
-
-    # location / {
-    #     include fastcgi_params;
-    #     fastcgi_param PATH_INFO $fastcgi_script_name;
-    #     fastcgi_param SCRIPT_NAME "";
-    #     fastcgi_pass unix:/tmp/stand-fcgi.sock;
-    # }
-
-    location / { try_files $uri @yourapplication; }
-    location @yourapplication {
+    location /api {
         include uwsgi_params;
         uwsgi_pass unix:/tmp/uwsgi.sock;
     }
 
+    location ^~ / {
+        root /usr/share/nginx/www/data.buckryan.com;
+    }
 
-    # redirect 404s
+    # redirect 40rs
     #
     error_page  404              /404.html;
     location = /404.html {
