--- a/deploy/supervisor.conf
+++ b/deploy/supervisor.conf
@@ -1,12 +1,12 @@
 [program:stand]
-command=/home/buck/stand/.venv/bin/uwsgi
-        -s /tmp/uwsgi.sock
-        -H /home/buck/stand/.venv/
-        --python-path /home/buck/stand/
-        -w main:app
-        --chmod-socket=666
-autostart=true
-autorestart=true
-stdout_logfile=/home/buck/stand/uwsgi.log
-redirect_stderr=true
-stopsignal=QUIT
+command = /home/buck/.virtualenvs/buckstats/bin/uwsgi
+          -s /tmp/uwsgi.sock
+          -H /home/buck/.virtualenvs/buckstats/
+          -w buckstats.app:app
+          --chmod-socket=666
+username = buck
+autostart = true
+autorestart = true
+stdout_logfile = /home/buck/uwsgi.log
+redirect_stderr = true
+stopsignal =QUIT
